toml-pretty-deser/tests/snapshots/b01__adapt_inner_wrong_types.snap
---
source: toml-pretty-deser/tests/b01.rs
expression: "e.pretty(\"test.toml\")"
---
Error 1/2
  ╭─test.toml
  ┆
1 │ 
2 │ inner = 4
  ┆         ┬
  ┆         │
  ┆         ╰─ Wrong type: expected string-to-convert, found integer.
──╯
Hint: This value has the wrong type.

Error 2/2
  ╭─test.toml
  ┆
1 │ 
2 │ inner = 4
3 │ other = 123
  ┆         ─┬─
  ┆          │
  ┆          ╰── Wrong type: expected string, found integer.
──╯
Hint: This value has the wrong type.
