toml-pretty-deser/tests/snapshots/b01__basic_alias_anycase.snap
---
source: toml-pretty-deser/tests/a01.rs
expression: "e.pretty(\"test.toml\")"
---
Error 1/1
  ╭─test.toml
  ┆
1 │ 
2 │         u_8 = 1
3 │         oPt_u8 =2
4 │         vec-u8 = 3
  ┆                  ┬
  ┆                  │
  ┆                  ╰─ Wrong type: expected array, found integer.
──╯
Hint: This value has the wrong type.
