toml-pretty-deser/tests/snapshots/b01__basic_missing.snap
---
source: toml-pretty-deser/tests/b01.rs
expression: "errors[0].pretty(\"test.toml\")"
---
  ╭─test.toml
1 │
  ┆ ┬
  ┆ │
  ┆ ╰─ Missing required key: 'a_u8'.
──╯
