toml-pretty-deser/tests/snapshots/b01__basic_unknown.snap
---
source: toml-pretty-deser/tests/b01.rs
expression: "errors[0].pretty(\"test.toml\")"
---
  ╭─test.toml
  ┆
1 │ 
2 │         shu = 23
  ┆         ─┬─
  ┆          │
  ┆          ╰─────── Unknown key.
──╯
Hint: All known accepted values have been used.
