toml-pretty-deser/tests/snapshots/b01__box_nested_missing.snap
---
source: toml-pretty-deser/tests/b01.rs
expression: "e.pretty(\"test.toml\")"
---
Error 1/1
  ╭─test.toml
  ┆
1 │
  ┆ ┬
  ┆ │
  ┆ ╰─ Missing required key: 'boxed'.
──╯
